# github-project-assistant

./: .gitignore  README.md  build_script.py  install.sh  pyproject.toml
.github/: install_template.sh
.github/workflows/: release.yml
gpa/: README.md  api.py  cli.py  config.py
gpa/commands/: commit.py  docs.py  pr.py  review.py  scan.py
gpa/services/: doc_service.py  file_service.py  github_service.py  groq_service.py
src/gpa/: cli.py
src/gpa/commands/: issue.py  scan.py
src/gpa/commands/static/: styles.css
src/gpa/services/: git_service.py  github_service.py
src/gpa/utils/: formatting.py
